force-app/main/default/objects/Judgement__c/Judgement__c.object-meta.xml
<CustomObject>
    <label>Judgment</label>
    <nameField>
        <displayFormat>J-{0}</displayFormat>
        <label>Judgment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Judgments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>