force-app/main/default/objects/Judgement__c/fields/Assignment_Date__c.field-meta.xml
<CustomField>
    <fullName>Assignment_Date__c</fullName>
    <inlineHelpText>Date the judgment was assigned back to DIR to be handled.</inlineHelpText>
    <label>Assignment Date</label>
    <type>Date</type>
</CustomField>