force-app/main/default/objects/Judgement__c/fields/Attorney_Fee_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Fee_Payments_Received__c</fullName>
    <description>Rollup Summary of judgment payments received and captured on apply payment page. Rolls up all Judgment Payments applied to Attorney Fees</description>
    <inlineHelpText>Total of all payments received against Attorney Fees that are a part of this judgment.</inlineHelpText>
    <label>Attorney Fee Payments Received</label>
    <summarizedField>Judgment_Payment__c.Allocated_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Judgment_Payment__c.Apply_Payment_To__c</field>
        <operation>equals</operation>
        <value>Attorney Fees</value>
    </summaryFilterItems>
    <summaryForeignKey>Judgment_Payment__c.Judgment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>