force-app/main/default/objects/Judgement__c/fields/Attorney_Fees__c.field-meta.xml
<CustomField>
    <fullName>Attorney_Fees__c</fullName>
    <label>Attorney Fees</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>