force-app/main/default/objects/Judgement__c/fields/Closed__c.field-meta.xml
<CustomField>
    <fullName>Closed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Boolean field set automatically when the judgment is considered complete and no further actions are expected on it. Field is not displayed on the page layouts, but is set by wfr, process, or flow and is used in code or other automation functionality.</description>
    <label>Closed</label>
    <type>Checkbox</type>
</CustomField>