force-app/main/default/objects/Judgement__c/fields/Court__c.field-meta.xml
<CustomField>
    <fullName>Court__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Court</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 OR 2</booleanFilter>
        <errorMessage>The value entered must be an Office record of record type &#39;Courthouse&#39; or &#39;County Registrar&#39;</errorMessage>
        <filterItems>
            <field>Office__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Courthouse</value>
        </filterItems>
        <filterItems>
            <field>Office__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>County Registrar</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Judgments (Court)</relationshipLabel>
    <relationshipName>Court</relationshipName>
    <type>Lookup</type>
</CustomField>