force-app/main/default/objects/Judgement__c/fields/Date_E_filed__c.field-meta.xml
<CustomField>
    <fullName>Date_E_filed__c</fullName>
    <label>Date E-filed</label>
    <type>Date</type>
</CustomField>