force-app/main/default/objects/Judgement__c/fields/E_filing_Vendor__c.field-meta.xml
<CustomField>
    <fullName>E_filing_Vendor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Looks up to office where the record type is Vendor</description>
    <label>E-filing Vendor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Office__c.RecordType.Name</field>
            <operation>equals</operation>
            <value>Vendor</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Office__c</referenceTo>
    <relationshipLabel>Judgments (E-filing Vendor)</relationshipLabel>
    <relationshipName>Judgments</relationshipName>
    <type>Lookup</type>
</CustomField>