force-app/main/default/objects/Judgement__c/fields/Filing_Fee__c.field-meta.xml
<CustomField>
    <fullName>Filing_Fee__c</fullName>
    <inlineHelpText>Filing fee for the court for filing the judgment</inlineHelpText>
    <label>Filing Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>