force-app/main/default/objects/Judgement__c/fields/JEU_Case__c.field-meta.xml
<CustomField>
    <fullName>JEU_Case__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>JEU Case</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>This field only accepts Case Management records with a JEU record type.</errorMessage>
        <filterItems>
            <field>DIR_Case__c.RecordType.DeveloperName</field>
            <operation>contains</operation>
            <value>JEU</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>DIR_Case__c</referenceTo>
    <relationshipLabel>Related Case Judgments</relationshipLabel>
    <relationshipName>JEU_Judgments</relationshipName>
    <type>Lookup</type>
</CustomField>