force-app/main/default/objects/Judgement__c/fields/Judgment_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Judgment_Payments_Received__c</fullName>
    <description>Rollup Summary of judgment payments received and captured on apply payment page. Rolls up all Judgment Payments applied to Judgment Amount</description>
    <inlineHelpText>Total of all payments received against case issues that are a part of this judgment</inlineHelpText>
    <label>Judgment Payments Received</label>
    <summarizedField>Judgment_Payment__c.Allocated_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Judgment_Payment__c.Apply_Payment_To__c</field>
        <operation>equals</operation>
        <value>Judgment Amount</value>
    </summaryFilterItems>
    <summaryForeignKey>Judgment_Payment__c.Judgment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>