force-app/main/default/objects/Judgement__c/fields/Meeting_Held_By_Title__c.field-meta.xml
<CustomField>
    <fullName>Meeting_Held_By_Title__c</fullName>
    <formula>TEXT(Meeting__r.Hearing_Officer_Employee__r.Title__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Meeting Held By Title</label>
    <type>Text</type>
</CustomField>