force-app/main/default/objects/Judgement__c/fields/ODA__c.field-meta.xml
<CustomField>
    <fullName>ODA__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the ODA that generated this judgment</description>
    <label>ODA</label>
    <referenceTo>ODAS__c</referenceTo>
    <relationshipLabel>Judgments</relationshipLabel>
    <relationshipName>Judgments</relationshipName>
    <type>Lookup</type>
</CustomField>