force-app/main/default/objects/Judgement__c/fields/Post_hearing_Interest_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Post_hearing_Interest_Balance_Due__c</fullName>
    <formula>Interest_Due__c - Post_Hearing_Interest_Payments_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post-Hearing Interest Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>