force-app/main/default/objects/Judgement__c/fields/Post_Hearing_Interest_Payments_Received__c.field-meta.xml
<CustomField>
    <fullName>Post_Hearing_Interest_Payments_Received__c</fullName>
    <description>Rollup Summary of judgment payments received and captured on apply payment page. Rolls up all Judgment Payments applied to Post-Hearing Interest.</description>
    <inlineHelpText>Total of all payments received against Post-Hearing Interest that is part of this Judgment.</inlineHelpText>
    <label>Post-Hearing Interest Payments Received</label>
    <summarizedField>Judgment_Payment__c.Allocated_Amount__c</summarizedField>
    <summaryFilterItems>
        <field>Judgment_Payment__c.Apply_Payment_To__c</field>
        <operation>equals</operation>
        <value>Post-Hearing Interest</value>
    </summaryFilterItems>
    <summaryForeignKey>Judgment_Payment__c.Judgment__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>