force-app/main/default/objects/Judgement__c/fields/Post_Judgement_Interest__c.field-meta.xml
<CustomField>
    <fullName>Post_Judgement_Interest__c</fullName>
    <description>Interest on the judgement following the filing date</description>
    <inlineHelpText>Interest on the judgement following the filing date</inlineHelpText>
    <label>Post-Judgment Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>