force-app/main/default/objects/Judgement__c/fields/Post_judgment_Interest_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>Post_judgment_Interest_Balance_Due__c</fullName>
    <formula>Post_Judgement_Interest__c - Post_Judgment_Interest_Payments_Received__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post-Judgment Interest Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>