force-app/main/default/objects/Judgement__c/fields/Referral__c.field-meta.xml
<CustomField>
    <fullName>Referral__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Referral</label>
    <referenceTo>Referral__c</referenceTo>
    <relationshipName>Judgements</relationshipName>
    <type>Lookup</type>
</CustomField>