force-app/main/default/objects/Judgement__c/fields/Settlement_Amounts_that_Accrue_Interest__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Amounts_that_Accrue_Interest__c</fullName>
    <formula>IF ( !ISBLANK( Settlement__c ) , Settlement__r.Amounts_Due_that_Accrue_Interest__c,
     IF ( !ISBLANK (  ODA__c ) ,  ODA__r.ODA_Amount_that_accrues_interest__c , NULL )
   )</formula>
    <label>Amounts That Accrue Interest</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>