force-app/main/default/objects/Judgement__c/fields/Settlement_Interest_Amount__c.field-meta.xml
<CustomField>
    <fullName>Settlement_Interest_Amount__c</fullName>
    <label>Settlement Interest Amount</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>