force-app/main/default/objects/Judgement__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
                <default>true</default>
                <label>Open</label>
            </value>
            <value>
                <fullName>Open - Bankruptcy Stay</fullName>
            </value>
            <value>
                <fullName>Open - Payment Plan</fullName>
            </value>
            <value>
                <fullName>Partial Satisfaction</fullName>
            </value>
            <value>
                <fullName>Full Satisfaction</fullName>
            </value>
            <value>
                <fullName>Pending/Open</fullName>
            </value>
            <value>
                <fullName>Vacated</fullName>
            </value>
            <value>
                <fullName>Closed - Paid in Full (PIF)/Satisfied</fullName>
            </value>
            <value>
                <fullName>Closed - Bankruptcy</fullName>
            </value>
            <value>
                <fullName>Closed - Infeasible</fullName>
            </value>
            <value>
                <fullName>Closed - Reassigned</fullName>
            </value>
            <value>
                <fullName>Closed - Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>