force-app/main/default/objects/Judgement__c/fields/Total_Penalties_Due__c.field-meta.xml
<CustomField>
    <fullName>Total_Penalties_Due__c</fullName>
    <label>Total Penalties Due</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>