force-app/main/default/objects/Judgement__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ODA by Settlement</fullName>
            </value>
            <value>
                <fullName>ODA</fullName>
            </value>
            <value>
                <fullName>JEU</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>