force-app/main/default/objects/Judgement__c/fields/Wage_Justice_Center_Fees__c.field-meta.xml
<CustomField>
    <fullName>Wage_Justice_Center_Fees__c</fullName>
    <label>Wage Justice Center Fees</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>