force-app/main/default/objects/Judgement__c/fields/WJC_Disposition__c.field-meta.xml
<CustomField>
    <fullName>WJC_Disposition__c</fullName>
    <label>WJC Disposition</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Accepted</fullName>
            </value>
            <value>
                <fullName>Rejected</fullName>
            </value>
            <value>
                <fullName>Collected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>