force-app/main/default/objects/Judgement__c/fields/X2810_4_Notice_mailed__c.field-meta.xml
<CustomField>
    <fullName>X2810_4_Notice_mailed__c</fullName>
    <label>2810.4 Notice mailed</label>
    <type>Date</type>
</CustomField>