force-app/main/default/objects/Judgement__c/recordTypes/BOFE.recordType-meta.xml
<RecordType>
    <fullName>BOFE</fullName>
    <active>true</active>
    <description>BOFE and Judgment Enforcement Unit</description>
    <label>BOFE</label>
</RecordType>